fix svg bug, align all cta banners with design

--- a/web/src/components/CtaBanner.scss
+++ b/web/src/components/CtaBanner.scss
@@ -1,8 +1,3 @@
 .cta-banner {
-    padding: 1.5rem;
     border-radius: 3px;
-
-    &__icon-column {
-        margin-right: 1.5rem;
-    }
 }
